rajout consignes exos 3 et 4

--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_03.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_03.tex
@@ -5,7 +5,10 @@
 	\input{../assets/tikz/td1_ex03_3.tex}
 
 	\begin{enumerate}
-		\item Montrer que 
+		\item Montrer que \textsc{Steiner Tree} est NP-complet.
+		Procéder à une réduction à partir de \textsc{Exact Cover by 3-Sets}.
+
+		\item Montrer que \textsc{Steiner Tree} est NP-complet par une réduction à partir de \textsc{Vertex Cover}.
 	\end{enumerate}
 \end{td-exo}
 
