--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_04.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_04.tex
@@ -1,6 +1,9 @@
 % ----- Consignes exo 4 ----- %
-\begin{td-exo}[title]\,\\ % 4 
-	
+\begin{td-exo}[Autour de \textsc{Coupe maximum}]\,\\ % 4 
+	\input{../assets/tikz/td1_ex04_1.tex}
+
+	Réduire \textsc{Non Egal 3-SAT} à \textsc{Coupe maximum}. Conclure.
+	\textit{Remarque}: vous verrez en master que coupe min est polynomiale meme si les aretes ont des poids.
 \end{td-exo}
 
 % ----- Solutions exo 4 ----- %
