mini changements negligeables -- CF

--- a/src/HAI807I_Calcul_Formel/tds/exos/exo_04.tex
+++ b/src/HAI807I_Calcul_Formel/tds/exos/exo_04.tex
@@ -18,6 +18,9 @@
 
 		\SageFile{../tps/exo04_f02.py}{Fonction de multiplication de polynomes}{lst:ex04_f02}
 
+		Remarquons que dans les deux fonctions on donne une variable \(R\) qui correspond à l'anneau dans lequel on travaille en entrée.
+		Cela est surtout utile pour initialiser les coefficients de nos polynomes à zéro.
+
 		Une fonction importante qu'on a utilisé dans les programmes précédent est celle de normalisation.
 		Elle permet de retirer les zeros en trop après les opérations (par exemple \((X + 1) + (-X + 1)\) donnera \(2\) et pas \(0X + 2\)).
 
