--- a/src/HAI807I_Calcul_Formel/tds/exos/exo_05.tex
+++ b/src/HAI807I_Calcul_Formel/tds/exos/exo_05.tex
@@ -15,6 +15,8 @@
 % ----- Solutions exo 5 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 5
-		
+		\begin{enumerate}
+			\item 
+		\end{enumerate}
 	\end{td-sol}
 }{}
