small maj to exos 5 and 59 -- AA

--- a/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_05.tex
+++ b/src/HAI802I_Algorithmique_Avancee/tds/exos/exo_05.tex
@@ -6,6 +6,6 @@
 % ----- Solutions exo 5 ----- %
 \iftoggle{showsolutions}{ 
 	\begin{td-sol}[]\ % 5
-		
+		% ca marche avec ineg triangulaire
 	\end{td-sol}
 }{}
