--- a/src/HAI820I_Complements_RO/tds/td_content.tex
+++ b/src/HAI820I_Complements_RO/tds/td_content.tex
@@ -27,6 +27,8 @@
     \input{../tds/td_3.tex}
     \newpage
     \input{../tds/td_4.tex}
+    \newpage
+    \input{../tds/annexes.tex}
     
 
     % \newpage
