small maj exos 8-10 -- CF

--- a/src/HAI807I_Calcul_Formel/tds/exos/exo_08.tex
+++ b/src/HAI807I_Calcul_Formel/tds/exos/exo_08.tex
@@ -1,6 +1,18 @@
 % ----- Consignes exo 8 ----- %
-\begin{td-exo}[title]\, % 8 
-	
+\begin{td-exo}[]\,\\ % 8 
+	En utilisant Sagemath et en considérant que les polynomes sont toujours donnés par la liste ordonnée de leurs coefficients,
+	\begin{enumerate}
+		\item Vérifier que la multiplication de la matrice 
+		\begin{equation*}
+			V = 
+			\begin{pmatrix}
+				1 & 1 & 1\\
+				1 & 2 & 4\\
+				1 & 3 & 9
+			\end{pmatrix}
+		\end{equation*}
+		par le vecteur \(y = {(\alpha_0, \alpha_1, \alpha_2)}^T\) correspond à l'évaluation du polynome \(P(X) = \alpha_0 + \alpha_1 X + \alpha_2 X^2\) en \(1\), \(2\) et \(3\).
+	\end{enumerate}
 \end{td-exo}
 
 % ----- Solutions exo 8 ----- %
